--- a/public/index.html
+++ b/public/index.html
@@ -5,33 +5,94 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gestion Utilisateurs</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
+  <style>
+    body {
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      min-height: 100vh;
+      padding: 2rem 0;
+    }
+    .main-card {
+      border-radius: 15px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.3);
+    }
+    .card {
+      border: none;
+      border-radius: 10px;
+    }
+    h1 {
+      color: white;
+      font-weight: bold;
+      text-shadow: 2px 2px 4px rgba(0,0,0,0.2);
+    }
+    .list-group-item {
+      border-left: 4px solid #667eea;
+      margin-bottom: 0.5rem;
+      border-radius: 8px !important;
+    }
+    .btn-primary {
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      border: none;
+    }
+    .btn-primary:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+    }
+  </style>
 </head>
 <body>
-  <div class="container mt-5">
-    <h1 class="mb-4">Gestion des Utilisateurs</h1>
+  <div class="container">
+    <h1 class="text-center mb-5">
+      <i class="bi bi-people-fill"></i> Gestion des Utilisateurs
+    </h1>
     
-    <div class="card mb-4">
-      <div class="card-body">
-        <h5 class="card-title">Ajouter un utilisateur</h5>
-        <form id="userForm">
-          <div class="mb-3">
-            <label for="nom" class="form-label">Nom</label>
-            <input type="text" class="form-control" id="nom" required>
+    <div class="row justify-content-center">
+      <div class="col-lg-10">
+        <div class="bg-white p-4 mb-4 main-card">
+          <div class="row">
+            <div class="col-md-5">
+              <div class="card shadow-sm mb-4 mb-md-0">
+                <div class="card-body">
+                  <h5 class="card-title text-primary">
+                    <i class="bi bi-person-plus-fill"></i> Ajouter un utilisateur
+                  </h5>
+                  <form id="userForm" class="mt-3">
+                    <div class="mb-3">
+                      <label for="nom" class="form-label fw-bold">
+                        <i class="bi bi-person"></i> Nom
+                      </label>
+                      <input type="text" class="form-control" id="nom" placeholder="Dupont" required>
+                    </div>
+                    <div class="mb-3">
+                      <label for="prenom" class="form-label fw-bold">
+                        <i class="bi bi-person-badge"></i> Prénom
+                      </label>
+                      <input type="text" class="form-control" id="prenom" placeholder="Jean" required>
+                    </div>
+                    <button type="submit" class="btn btn-primary w-100">
+                      <i class="bi bi-plus-circle"></i> Ajouter
+                    </button>
+                  </form>
+                </div>
+              </div>
+            </div>
+            
+            <div class="col-md-7">
+              <div class="card shadow-sm">
+                <div class="card-body">
+                  <h5 class="card-title text-primary">
+                    <i class="bi bi-list-ul"></i> Liste des utilisateurs
+                  </h5>
+                  <ul id="userList" class="list-group list-group-flush mt-3">
+                    <li class="list-group-item text-muted text-center">
+                      <i class="bi bi-hourglass-split"></i> Chargement...
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
           </div>
-          <div class="mb-3">
-            <label for="prenom" class="form-label">Prénom</label>
-            <input type="text" class="form-control" id="prenom" required>
-          </div>
-          <button type="submit" class="btn btn-primary">Ajouter</button>
-        </form>
-      </div>
-    </div>
-
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">Liste des utilisateurs</h5>
-        <ul id="userList" class="list-group">
-        </ul>
+        </div>
       </div>
     </div>
   </div>
